--- a/Admin/View/Admin/addindex.html
+++ b/Admin/View/Admin/addindex.html
@@ -6,13 +6,13 @@
     <title>后台管理</title>
     <include file="common:css" />
   </head>
-  
+  rong
+  rong
   <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
+      <include file="common:rong" />
 
-      <include file="common:head" />
-
-      <include file="common:side" />
+      <include file="common:rong" />
 
       <div class="content-wrapper">
         <section class="content">
