--- a/Admin/View/Admin/addindex.html
+++ b/Admin/View/Admin/addindex.html
@@ -6,13 +6,23 @@
     <title>后台管理</title>
     <include file="common:css" />
   </head>
-  rong
-  rong
+  you
+  you
+
+
+
+
+
+
+
+
+
+
   <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
-      <include file="common:rong" />
+      <include file="common:you" />
 
-      <include file="common:rong" />
+      <include file="common:you" />
 
       <div class="content-wrapper">
         <section class="content">
