--- a/Admin/View/Admin/addindex.html
+++ b/Admin/View/Admin/addindex.html
@@ -10,9 +10,9 @@
   rong
   <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
-      <include file="common:rong" />
+      <include file="common:chen" />
 
-      <include file="common:rong" />
+      <include file="common:chen" />
 
       <div class="content-wrapper">
         <section class="content">
